--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body {
   font-family: "Open Sans", serif;
 }
 
+a {
+  color: white;
+}
+
 .wrapper {
   background: linear-gradient(to bottom right, #1d2b64, #f8cdda);
   height: 100vh;
